src/test/deca/context/valid/test_affect_compatible_string.deca
// Description:
//    Affectation et typage
//
// Resultats:
// 
// Historique:
//    cree le 01/01/2024

{
   string S = "Bonjour";
}
