src/test/deca/context/invalid/test_init_incompatible_string.deca
// Description:
//    Initialization
//
// Resultats:
//   ligne 11 : les deux types ne sont pas compatibles
//
// Historique:
//    cree le 01/01/2024

{
   string s = true ;
}
